# etsy-planner-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  PRD.md  WORKFLOW.md
specs/bundles/: component_showcase.json  wellness_starter.json
specs/pages/: adhd_task_dump.json  assignment_tracker.json  brain_dump.json  budget_snapshot.json  cleaning_reset.json  content_planner.json  daily_planner.json  daily_reset.json  deadline_tracker.json  evening_reflection.json  goal_planner.json  gratitude_journal.json  habit_tracker.json  meal_movement.json  meal_planner.json  monthly_overview.json  mood_energy_tracker.json  morning_ritual.json  nervous_system_reset.json  notes_lined.json  notes_page.json  payday_planner.json  self_care_menu.json  sunday_reset.json  weekly_reset.json  wellness_weekly.json  workout_wellness_tracker.json
src/planner_generator/: __init__.py  review.py
src/planner_generator/brand_system/: __init__.py  atelier_aurelia.py
tests/: test_batch_build.py  test_component_pages.py  test_etsy_draft.py  test_etsy_oauth.py  test_etsy_preflight.py  test_etsy_shops.py  test_etsy_submission.py  test_etsy_taxonomy.py  test_layout.py  test_listing_metadata.py  test_market_intelligence.py  test_page_renderer.py  test_pdf_export.py  test_pdf_to_png.py  test_review_showroom.py  test_specs.py  test_themes.py
themes/: academic_pastel.json  cozy_productivity.json  earthy_olive.json  elegant_monochrome.json  lavender_charcoal.json  minimal_neutral.json  muted_luxury.json  navy_mist.json  soft_feminine.json
(+81 files in other folders)
